fix: fail when no org claims present